# tabula

./: .gitignore  README.md  pyproject.toml
src/tabula/: __init__.py
src/tabula/game/: encoding.py
tests/: test_example.py
