[project]
name = "tabula"
version = "0.1.0"
description = "Building a Chess agent from scratch using principles from AlphaZero"
readme = "README.md"
authors = [
    { name = "srikantrao", email = "rao.shrikant@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
